--- a/src/FG.Samples.ServiceFabricPeople/TitleService/TitleService.csproj
+++ b/src/FG.Samples.ServiceFabricPeople/TitleService/TitleService.csproj
@@ -117,6 +117,7 @@
     </Compile>
     <Compile Include="Diagnostics\ICommunicationLogger.cs" />
     <Compile Include="Diagnostics\ITitleServiceLogger.cs" />
+    <Compile Include="IStatefulServiceMaintenance.cs" />
     <Compile Include="ITitleService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TitleService.cs" />
