--- a/src/FG.Samples.ServiceFabricPeople/TitleService/TitleService.csproj
+++ b/src/FG.Samples.ServiceFabricPeople/TitleService/TitleService.csproj
@@ -169,6 +169,10 @@
       <Project>{2b74fe3f-c1d2-4ecc-9347-8ffbcf687ab5}</Project>
       <Name>FG.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Actors.Remoting\FG.ServiceFabric.Actors.Remoting.csproj">
+      <Project>{045616FB-2560-4168-B073-8D5B86FA7B52}</Project>
+      <Name>FG.ServiceFabric.Actors.Remoting</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Diagnostics\FG.ServiceFabric.Diagnostics.csproj">
       <Project>{48e2c92e-4c29-431b-a048-ebff8bf98828}</Project>
       <Name>FG.ServiceFabric.Diagnostics</Name>
