--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,5 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+*ApplicationParameters/*.xml
+src/FG.Samples.ServiceFabricPeople/FG.Samples.ServiceFabricPeople/ApplicationParameters/*
