--- a/src/FG.Samples.ServiceFabricPeople/WebApiService/appsettings.json
+++ b/src/FG.Samples.ServiceFabricPeople/WebApiService/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "00000000-0000-0000-0000-000000000000"
   }
 }
