--- a/src/FG.Samples.ServiceFabricPeople/WebApiService/WebApiService.csproj
+++ b/src/FG.Samples.ServiceFabricPeople/WebApiService/WebApiService.csproj
@@ -85,5 +85,10 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="ApplicationInsights.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
