--- a/src/FG.Samples.ServiceFabricPeople/WebApiService/WebApiService.csproj
+++ b/src/FG.Samples.ServiceFabricPeople/WebApiService/WebApiService.csproj
@@ -6,6 +6,7 @@
     <IsServiceFabricServiceProject>True</IsServiceFabricServiceProject>
     <ApplicationInsightsResourceId>/subscriptions/35be3912-f4a0-4696-9494-e7c17651b2f6/resourcegroups/ce-labs-common-dev/providers/microsoft.insights/components/ce-labs-fabric-ai-dev</ApplicationInsightsResourceId>
     <ApplicationInsightsAnnotationResourceId>/subscriptions/35be3912-f4a0-4696-9494-e7c17651b2f6/resourcegroups/ce-labs-common-dev/providers/microsoft.insights/components/ce-labs-fabric-ai-dev</ApplicationInsightsAnnotationResourceId>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
